# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  03 Jan 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Modified 
  to specific port number in emerge sync. This closes #36994

  02 Jan 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed 
  a problem that emerge doesn't block package when it's required.
  It happens in .50_pre*.

  02 Jan 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed 
  issue with getsize() when --debug.

  02 Jan 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed 
  issue with virtual. This closes bug #9050, #22225, #29499.

  01 Jan 2004; Masatomo Nakano <nakano@gentoo.org> ebuild, emerge, portage.py:
  Fixed issue with not cleaning up temp directory. This closes bug #34967.

  31 Dec 2003; Masatomo Nakano <nakano@gentoo.org> emerge:
  Fixed 'emerge sync' issue which continuously connects to same host.

*portage-2.0.50_pre10 (31 Dec 2003): API change + enhancements

  31 Dec 2003; Nicholas Jones <carpaski@gentoo.org> emerge: Found the line
  that was causing the package dir to be printed... It was a spawn call.

  31 Dec 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix for
  the symlink corruption in the db from the movefile() bug.

  29 Dec 2003; Masatomo Nakano <nakano@gentoo.org> portage.py:
  Fixed bug which emerge stops when no denpendencies exist in || ( ) 
  by USE flags. This closes #36568.

  29 Dec 2003; Masatomo Nakano <nakano@gentoo.org> emerge, portage.py:
  Added an ambiguity package check when emerge. This closes bug #22700.

*portage-2.0.50_pre9 (24 Dec 2003): API change + enhancements

  24 Dec 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Added
  PORTAGE_TMPDIR to SANDBOX_READ/WRITE to ensure it works. SpanKY's
  patch for use negation added (use !foo). pkg_setup doesn't die on
  a non-zero exit status.

  24 Dec 2003; Nicholas Jones <carpaski@gentoo.org> emerge: using os.uname