@@ -717,7 +717,13 @@ for x in scanlist:
 				mykey=mytype+".bad"+suffix
 				myvalue=string.join(portage.db["/"]["porttree"].dbapi.aux_get(catdir+"/"+y,[ mytype ]))
 
-				mydep=portage.dep_check(myvalue,portage.db["/"]["porttree"].dbapi,repoman_settings,use="all",mode=matchmode)
+				try:
+					mydep=portage.dep_check(myvalue,portage.db["/"]["porttree"].dbapi,repoman_settings,use="all",mode=matchmode)
+				except KeyError, e:
+					stats[mykey]=stats[mykey]+1
+					fails[mykey].append(x+"/"+y+".ebuild: "+keyword+" "+repr(e[0]))
+					continue
+
 				if mydep[0]==1:
 					if mydep[1]!=[]:
 						#we have some unsolvable deps
