@@ -2,6 +2,9 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  04 Jan 2004; Masatomo Nakano <nakano@gentoo.org> repoman, portage.py:
+  Added new dependency check to repoman. This closes #36887.
+
   03 Jan 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Modified 
   to specific port number in emerge sync. This closes #36994
 
